--- a/index.html
+++ b/index.html
@@ -2,16 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>My First Site</title>
+    <style>
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Color+Emoji&family=Source+Code+Pro&display=swap');
+</style>
+<link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <img src="Default.jpg" alt="Default image" width="100" height="100" />
-    <br/>
-      Soumya Ghosh
+  <div class="div1">
+    <img class="logo" src="logo.jpg" alt="Logo" width="100px" />
+    <br>
+    <p class="name">
+        HackXLearn
+    </p>
       <br/>
-      Developer
-      <hr style="fill">
-          🤩 Hobbies:
+      <p class="dev">
+        Developer and Hacker
+      </p>
+      </div>
+      <p class="divider">
+        ······
+      </p>
+      <div class="div2">
+        <p class="l1emoji">
+          🤩
+        </p>
+          <p class="l1text">Hobbies:</p>
           <ul>
             <li>
               Coding
@@ -21,7 +40,12 @@
             </li>
           </ul>
         </li>
-          ✔️ Achievements:
+        <p class="l2emoji">
+          ✔️
+        </p>
+          <p class="l2text">
+            Achievements:
+          </p>
           <ul>
             <li>
               Anything
@@ -30,6 +54,12 @@
               Anything
             </li>
           </ul>
-          <a href="contact.html"> Contact me</a>
+        </div>
+        <div class="div3">
+           <a class="contact" href="mailto:soumya.ghosh1104@gmail.com"> Contact Me </a>
+           <p class="copyright">
+             Copyright (c) 2023 HackXLearn All Rights Reserved.
+           </p>
+        </div>
 </body>
 </html>
